--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/yalcinaksakal/reactAssignment2.git",
   "name": "first-react-project",
   "version": "0.1.0",
   "private": true,
@@ -8,9 +9,15 @@
     "react-scripts": "1.1.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
